--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
@@ -41,6 +42,7 @@
             android:theme="@style/AppTheme" />
 
         <service android:name=".timeService" />
+        <service android:name=".UpdateService" />
 
         <activity
             android:name=".LandingScreen"
@@ -56,7 +58,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Notification_Activity"
-            android:label="@string/title_activity_notification_"
+            android:label=""
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
             android:name=".MainPage"
