--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'com.sothree.slidinguppanel:library:3.0.0'
 }
