--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
         android:name=".AppControler"
@@ -28,7 +30,7 @@
             android:name=".Login"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
@@ -84,11 +86,24 @@
         <activity
             android:name=".CricketTransaction"
             android:label="@string/title_activity_cricket_transaction"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".UpcomingList"
             android:label="@string/title_activity_upcoming_list"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"></activity>
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity
+            android:name=".Container"
+            android:label="@string/title_activity_match_score_card"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MatchScoreCard"
+            android:label="@string/title_activity_match_score_card"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".MatchScoreTeamb"
+            android:label="@string/title_activity_match_score_card"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
     </application>
 
 </manifest>
