Added tab for accounts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,6 +113,26 @@
             android:name=".CricketTransactionDetails"
             android:label="@string/title_activity_cricket_transaction_details"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".CricketAccounts"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".CricketAccountsLastWeek"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TodaysHistory"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TodaysHistoryLastWeek"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TodaysSummaryActivity"
+            android:label="@string/title_activity_summary"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".CricketHistoryActivity"
+            android:label="@string/title_activity_cricket_summary"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
